@@ -1,3 +1,6 @@
+2007-12-30  Raphael Ackermann <raphael.ackermann@gmail.com>
+	* src/docgen/HtmlDoc.py: Fix undefined variables.
+
 2007-12-30  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/plugins/OnThisDay.py: i18n changes
 	* src/plugins/Makefile.am: added missing files
